Bug 1440827 - Cancel preloaded requests if we decide not to use them r=baku